# neon

./: .gitignore  Cargo.toml  Dockerfile  HANDOFF.md  LICENSE.md  README.md  TODO.md  install.sh
.github/workflows/: ci.yml  neovim.yml  release-linux.yml  release-macos.yml  zed.yml
bench/binary-trees/: run_bench.py
bench/binary-trees/dart/: main.dart
bench/binary-trees/haskell/: Main.hs
bench/binary-trees/ocaml/: main.ml
bench/brainfuck/: run_bench.py
bench/brainfuck/c/: main.c
bench/brainfuck/clojure/: main.clj
bench/brainfuck/cpp/: main.cpp
bench/brainfuck/dart/: main.dart
bench/brainfuck/dotnet/: Program.cs  brainfuck.csproj
bench/brainfuck/elixir/: main.exs
bench/brainfuck/go/: main.go
bench/brainfuck/haskell/: Main.hs
bench/brainfuck/java/: Main.java
bench/brainfuck/js/: main.js
bench/brainfuck/lua/: main.lua
bench/brainfuck/neon/: neon.toml
bench/brainfuck/ocaml/: main.ml
bench/brainfuck/perl/: main.pl
bench/brainfuck/python/: main.py
bench/brainfuck/ruby/: main.rb
bench/brainfuck/rust/: Cargo.toml
bench/brainfuck/zig/: main.zig
bench/n-body/: run_bench.py
bench/n-body/dart/: main.dart
bench/n-body/haskell/: Main.hs
bench/n-body/ocaml/: main.ml
bench/word-frequency/: run_bench.py
bench/word-frequency/dart/: main.dart
bench/word-frequency/haskell/: Main.hs
bench/word-frequency/ocaml/: main.ml
cli/: Cargo.toml  build.rs
cli/src/: buildcfg.rs  emit.rs  frontend.rs  main.rs  source.rs  sysroot.rs
cli/src/cmd/: check.rs  compile.rs  fmt.rs  lex.rs  mod.rs  parse.rs  sysroot.rs
compiler/: Cargo.toml
compiler/src/: ast.rs  diagnostic.rs  expand.rs  lib.rs  stdlib.rs
compiler/src/ast/: spans.rs
compiler/src/backend/: c.rs  ctype.rs  mod.rs
compiler/src/expand/: tests.rs
compiler/src/format/: mod.rs  tests.rs
compiler/src/ir/: effects.rs  lower.rs  mod.rs  opt.rs  partial.rs  refcount.rs  repr.rs  ssa.rs  unique.rs
compiler/src/lexer/: mod.rs  tests.rs  token.rs
compiler/src/parser/: error.rs  mod.rs  tests.rs
compiler/src/typecheck/: bdd.rs  check.rs  check_tests.rs  dispatch.rs  dispatch_tests.rs  empty.rs  env.rs  env_tests.rs  generic.rs  generic_tests.rs  mod.rs  narrow.rs  ordered.rs  print.rs  resolve.rs  result.rs  tests.rs  types.rs
compiler/tests/: backend_run.rs  corpus_check.rs  corpus_roundtrip.rs  ir_lower.rs  ir_repr.rs  unique_report.rs
docs/: decisions.md  finalpush.md
docs/design/: annotations.md  checked-casts.md  dispatch.md  generators.md  ir.md  opacity.md  resources.md  small-strings.md  stdlib.md  typechecker.md
docs/tasks/: open.md  throwing-closures.md
extra/tree-sitter-neon/: README.md
fuzz/: .gitignore  Cargo.toml  README.md  gen-dict.py  neon.dict  run.sh  seed.sh
fuzz/fuzz_targets/: format.rs  lex.rs  parse.rs
fuzz/known-crashes/: lex-escape-char-boundary
lsp/src/: features.rs
runtime/: CMakeLists.txt  Cargo.toml  build.rs
runtime/include/: libneon_rt.h  rt.h
runtime/include/neon/: any.h  core.h  lifecycle.h  trap.h
runtime/models/: CMakeLists.txt  README.md
runtime/models/an-immortal-object-is-never-dropped/: main.c
runtime/models/box-expect-traps-on-a-mismatched-tag/: main.c  sources.txt
runtime/models/box-round-trips-its-payload-and-drops-it-once/: main.c  sources.txt
runtime/models/div-and-rem-trap-on-the-inrepresentable-cases/: main.c  sources.txt
runtime/models/f64-to-i64-traps-outside-the-i64-range/: main.c  sources.txt
runtime/models/i64-abs-traps-only-at-int64-min/: main.c  sources.txt
runtime/models/lifecycle/: main.c  sources.txt
runtime/models/list/: main.c  sources.txt
runtime/models/list-at-traps-outside-the-list/: main.c
runtime/models/list-concat-preserves-order-and-ownership/: main.c
runtime/models/list-eq-agrees-with-cmp/: main.c
runtime/models/list-in-place-write-lands-in-the-right-slot/: main.c
runtime/models/list-in-place-write-on-a-shared-list-corrupts-it/: main.c
runtime/models/list-mutating-a-shared-list-copies-it/: main.c
runtime/models/list-new-with-capacity-preallocates/: main.c
runtime/models/list-push-grows-without-losing-bytes/: main.c
runtime/models/list-scalar-write-still-copies-when-shared/: main.c  sources.txt
runtime/models/list-set-releases-what-it-displaces/: main.c
runtime/models/map/: main.c
runtime/models/map-consumes-its-key-and-value/: main.c
runtime/models/map-equality-ignores-insertion-order/: main.c
runtime/models/map-len-is-exact/: main.c
runtime/models/map-new-starts-empty/: main.c
runtime/models/map-probe-does-not-stop-at-a-tombstone/: main.c  sources.txt
runtime/models/map-probe-terminates-on-a-saturated-table/: main.c
runtime/models/resource/: main.c  sources.txt
runtime/models/resource-cleanup-retains-the-env-before-releasing/: main.c
runtime/models/resource-cleanup-runs-exactly-once/: main.c
runtime/models/resource-disarm-picks-exactly-one-winner/: main.c
runtime/models/resource-get-hands-back-an-owned-payload/: main.c
runtime/models/resource-take-moves-the-payload-out-once/: main.c  sources.txt
runtime/models/retain-and-release-track-the-count/: main.c  sources.txt
runtime/models/str-add-borrows-and-concat-consumes/: main.c  sources.txt
runtime/models/str-cmp-agrees-with-eq-and-orders-bytes-unsigned/: checks-off.txt  main.c  sources.txt
runtime/models/support/: cbmc_support.h
runtime/models/the-drop-runs-exactly-once-at-zero/: main.c
runtime/src/: any.c  file.c  internal.h  io.c  lib.rs  list.c  map.c  rt.c  string.c  trap.c
runtime/tests/: any_test.c  any_test.cpp  arith_test.c  arith_test.cpp  core_test.c  file_test.c  init.c  init.cpp  io_test.c  lifecycle_test.c  lifecycle_test.cpp  list_test.c  list_test.cpp  map_test.c  map_test.cpp  math_test.c  math_test.cpp  resource_test.c  resource_test.cpp  string_test.c  string_test.cpp  support.h  trap_test.c
stdlib/: prelude.neon
stdlib/std/: fmt.neon  fs.neon  math.neon  resource.neon  string.neon
stdlib/std/collections/: list.neon  (+1 more)
tests/lang/: README.md  expected-pass.txt
verify/: Cargo.toml  README.md  run.sh
verify/src/: distinct.rs  fold.rs  lib.rs
(+426 files in other folders)
