[workspace]
members = ["compiler", "cli", "runtime"]
# The language server (`neon-lsp`) and the editor plugins now live in their own repos
# under the `neon-tube` org; `neon-lsp` pulls the compiler back in as a git dependency.
# `fuzz` is a detached workspace of its own (an empty `[workspace]` table in
# `fuzz/Cargo.toml`), because cargo-fuzz requires nightly and builds with
# sanitizers. That table is what actually keeps it out; listing it here as well
# means a stray `cargo build` in the root cannot be tempted to pick it up.
# `verify` is likewise detached (Kani drives its own toolchain and codegen backend).
exclude = ["fuzz", "verify"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
